# concrete

./: CMakeLists.txt  README.md
.github/workflows/: workflow.yml
apps/: CMakeLists.txt  allperms.cc  allsubsets.cc  cellular-1d.cc  invperm.cc  is-baxters.cc  permloops.cc  randbraces.cc  randperm.cc  readbst.cc  readtwin.cc
cmake/: Coverage.cmake
combinatorial/: braceview.hpp  combview.hpp
drawer/: CMakeLists.txt  drawutil.hpp  sdlutil.cc  sdlutil.hpp
framework/: cviews.hpp  dice.hpp  opts.hpp
permutations/: idomain.hpp  permloops.hpp  permutations.hpp
tests/: CMakeLists.txt
tests/allbraces/: CMakeLists.txt
tests/allperms/: CMakeLists.txt
tests/baxters/: CMakeLists.txt
tests/baxters-batch/: CMakeLists.txt
tests/baxters-filt/: CMakeLists.txt
tests/invperm/: CMakeLists.txt
tests/permloops/: CMakeLists.txt
tests/readbst/: 001.ans  003.ans  CMakeLists.txt
tests/readbst-back/: CMakeLists.txt
tests/readbst-batch/: CMakeLists.txt
tests/readbst-ibrac/: 001.ans  004.ans  CMakeLists.txt
tests/readbst-topo/: CMakeLists.txt
tests/readtwin/: 001.ans  CMakeLists.txt
tests/readtwin-baxters/: CMakeLists.txt
tests/scripts/: test-run.rb
trees/: tabtree.hpp  twintree.hpp
